src/test/ui/async-await/issues/issue-51719.stderr
error[E0728]: `await` is only allowed inside `async` functions and blocks
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
  --> $DIR/issue-51719.rs:10:19
=======
  --> $DIR/issue-51719.rs:8:19
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
   |
LL |     let _gen = || foo().await;
   |                -- ^^^^^^^^^^^ only allowed inside `async` functions and blocks
   |                |
   |                this is not `async`

error: aborting due to previous error

